--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -21,4 +21,66 @@ img {
   width: 550px;
 }
 
+.container {
+  min-height: 100%;
+  display: flex;
+}
 
+.nav {
+  width: 15%;
+  min-width: 140px;
+  color: #FFCFCF;
+  padding-top: 55px;
+  padding-right: 30px;
+  text-align: center;
+}
+
+.nav h4 {
+  -webkit-margin-before: 0;
+  margin-left: 30px
+}
+
+ul {
+  list-style: none;
+}
+
+.main ul {
+  padding-left: 30px;
+}
+
+.main li {
+  font-size: 0.85rem;
+}
+
+.main {
+  width: 85%;
+  min-height: 750px;
+  min-width: 600px;
+  background-color: #FFCFCF;
+}
+
+.main h1 {
+  -webkit-margin-before: 0;
+  padding-top: 40px;
+  padding-left: 30px;
+}
+
+.main video {
+  padding-left: 30px;
+}
+
+.main p {
+  padding-left: 30px;
+  width: 55%;
+  min-width: 550px;
+}
+
+.main a {
+  color: inherit;
+  padding-left: 30px;
+  text-decoration: none;
+}
+
+.main a:hover {
+  text-decoration: underline;
+}
